--- a/style.scss
+++ b/style.scss
@@ -47,7 +47,7 @@
         justify-content: center;
         align-items: center;
             height: 80vh;
-        background-image: url(/img/pexels-roberto-nickson-3082341.jpg);
+        background-image: url('img/pexels-roberto-nickson-3082341.jpg');
         background-repeat: no-repeat;
         background-size:100%;
 
